Fix dropdown z-index
Test Plan:
Load http://exercises.ka.local/exercises/inequalities_on_a_number_line.html?problem=equation_from_line
Turn on the scratchpad
Use the dropdown

Auditors: aria

--- a/css/khan-exercise.css
+++ b/css/khan-exercise.css
@@ -166,7 +166,8 @@ body.debug .graphie { outline: 1px dashed #fdd; }
 
 #problemarea a:link,
 #problemarea input,
-#problemarea label { /* HACK(aria): for radios */
+#problemarea label,  /* HACK(aria): for radios */
+#problemarea select {  /* for dropdowns */
     position: relative; z-index: 3; /* interactive-content */
 }
 
